src/objects/HPP_T_C_Observation__c.object
<CustomObject>
    <fields>
        <fullName>Lumpsum_options__c</fullName>
        <description>Lump sum</description>
        <inlineHelpText>Explain Lump Sum Payments, ERC, options to reduce term and payments</inlineHelpText>
        <label>Lumpsum options</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marketing_Consent_confirmation__c</fullName>
        <inlineHelpText>Confirm with the customer their consent for Marketing by IBB and ensure that the online form is completed correctly as part of the application process</inlineHelpText>
        <label>Marketing Consent confirmation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NO_inaccurate_information_given_to_cust__c</fullName>
        <inlineHelpText>No inaccurate information was given to the customer during the interview</inlineHelpText>
        <label>No inaccurate information given to cust</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name_of_Seller_observed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name of Seller observed</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_T_C_Observation_Phone</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Steps_Product_guide__c</fullName>
        <description>Full Process</description>
        <inlineHelpText>Seller explains to the customer the next steps &amp; timescales involved using theHPP Information Booklet as a reference, i.e. Credit search/underwriting/survey/offer/completion!</inlineHelpText>
        <label>Next Steps - Product guide</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Advice_Given_Disclaimer__c</fullName>
        <inlineHelpText>Did the Seller clearly outline that no advice would be given during the call?</inlineHelpText>
        <label>No Advice Given Disclaimer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Advice_Recommendation_made__c</fullName>
        <inlineHelpText>During the call did the seller clearly explain to the customer that no advice or recommendations would be made?</inlineHelpText>
        <label>No Advice/Recommendation made?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Advice__c</fullName>
        <description>Stress no Advice/guidance offered, confirmation the customer is clear it is their decision (note the decision)</description>
        <inlineHelpText>Stress no Advice/guidance offered only, note which product to be discussed.</inlineHelpText>
        <label>No Advice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Advice_recommendations_made__c</fullName>
        <inlineHelpText>Seller did not give advice or make a recommendation</inlineHelpText>
        <label>No Advice/recommendations made?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Observation_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Observation Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>HPP_T_C_Observation_Phone1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Commentary__c</fullName>
        <description>Overall coimmentary on quality of call</description>
        <label>Overall Commentary</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Overall_Rating_New__c</fullName>
        <formula>IF( ISPICKVAL(  Rating__c , &quot;Compliant&quot;) ,  IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOf&quot;, &quot;Compliant&quot;),

IF( ISPICKVAL( Rating__c , &quot;Compliant with development&quot;), IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001r7x7&quot;, &quot;Compliant with development&quot;),

IF( ISPICKVAL( Rating__c , &quot;Non-compliant&quot;),  IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOk&quot;, &quot;Non-Compliant&quot;), null)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Overall_rating__c</fullName>
        <formula>IF( 
OR(TEXT(   Call_greeting__c )=&quot;No&quot;, 
TEXT(   Any_questions_on_product_please_contact__c  )=&quot;No&quot;,
TEXT(   Explains_Product_Options_Standard_Fixed__c )=&quot;No&quot;, TEXT(   Ask_all_qualifying_questions__c )=&quot;No&quot;, TEXT(   Explicit_Consent_to_hold_Data__c )=&quot;No&quot;, TEXT(   NO_inaccurate_information_given_to_cust__c )=&quot;No&quot;,  TEXT(  Initial_Disclosure_Document__c  )=&quot;No&quot;, TEXT(  Risks_features_Document__c  )=&quot;No&quot;, TEXT(  Steps_1_6_completed_using_info_from_cust__c  )=&quot;No&quot;, TEXT(  Credit_Scoring_Further_undewriting__c )=&quot;No&quot;, TEXT(  Provides_FIS_confirms_importance__c )=&quot;No&quot;, TEXT(  Explains_fees_from_Tariff_List__c )=&quot;No&quot;, TEXT(  Warning_Liability_fees_if_withdraw__c  )=&quot;No&quot;, TEXT(  Source_of_Deposit_clarified__c  )=&quot;No&quot;, TEXT(  No_Advice_recommendations_made__c  )=&quot;No&quot;, TEXT(   All_relevant_information_recorded__c  )=&quot;No&quot;, 
TEXT(  NO_inaccurate_information_given_to_cust__c )=&quot;No&quot;),  
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOk&quot;, &quot;Non-Compliant&quot;),  
IMAGE(&quot;/servlet/servlet.FileDownload?file=01520000000fuOf&quot;, &quot;Compliant&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall rating</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Instruction_form__c</fullName>
        <inlineHelpText>Seller should advise the customer that either a cheque or debit card payment instruction form MUST be returned with the application form in order for us to progress the application.  Aslo confirm that they will be contacted for their CVC code once rec&apos;d.</inlineHelpText>
        <label>Payment Instruction form</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_rent_acquisition__c</fullName>
        <label>Payment rent &amp; acquisition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With learning points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pre_paid_envelope_provided__c</fullName>
        <inlineHelpText>Prepaid envelope will be provided &amp; instructions to return</inlineHelpText>
        <label>Pre-paid envelope provided</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Professional_manner_throughout_call__c</fullName>
        <inlineHelpText>Did the seller display a professional manner throughout the call?</inlineHelpText>
        <label>Professional manner throughout call?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Provides_FIS_confirms_importance__c</fullName>
        <inlineHelpText>Seller  provides FIS, reviews information shown with customer, confirms the importance and that this will be sent out to the customer</inlineHelpText>
        <label>Provides FIS &amp; confirms importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>R_F_and_IDD_read_our_correctly__c</fullName>
        <inlineHelpText>Was the product risk and features and the Initial disclosure document read out correctly to the customer?</inlineHelpText>
        <label>R&amp;F and IDD read our correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compliant</fullName>
                </value>
                <value>
                    <fullName>Compliant with development</fullName>
                </value>
                <value>
                    <fullName>Non-compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rental_Charge_Acquisition_Payment_exp__c</fullName>
        <inlineHelpText>Seller explains how rental(occupancy) charge and acquisition payments are calculated</inlineHelpText>
        <label>Rental Charge/Acquisition Payment exp.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risks_features_Document__c</fullName>
        <inlineHelpText>Seller explains the risks &amp; features document</inlineHelpText>
        <label>Risks &amp; features Document</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_of_Deposit_clarified__c</fullName>
        <inlineHelpText>has seller clarified the Source of deposit for the HPP Application and confirmed that this is satisfactory for IBB Purposes</inlineHelpText>
        <label>Source of Deposit - clarified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_1_6_completed_using_info_from_cust__c</fullName>
        <inlineHelpText>Steps 1-6 completed by using information provided by the customer</inlineHelpText>
        <label>Steps 1-6 completed using info from cust</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_of_Solicitors_No_recommendation__c</fullName>
        <inlineHelpText>Seller explains that we have list of Panel solicitors that are experinced in islamic finance without making a recommendation but enabling the customer to make an informed choice</inlineHelpText>
        <label>Use of Solicitors - No recommendation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warning_Liability_fees_if_withdraw__c</fullName>
        <inlineHelpText>Give the customer the appropriate warning that if they decide to withdraw what their laibility to expenses will be if they withdraw from sale</inlineHelpText>
        <label>Warning - Liability fees if withdraw</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With Learning Points</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_Eligibility_Done_Correctly__c</fullName>
        <inlineHelpText>Was eligibility for the product completed correctly by the seller?</inlineHelpText>
        <label>Was Eligibility Done Correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_App_form_completed_correctly__c</fullName>
        <inlineHelpText>Was the application form completed correctly?</inlineHelpText>
        <label>Was the App form completed correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_FIS_Explained_correctly__c</fullName>
        <inlineHelpText>Was the FIS explained correctly to the customer?</inlineHelpText>
        <label>Was the FIS Explained correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_Seller_friendly_and_helpful__c</fullName>
        <inlineHelpText>Was the seller friendly and helpful throughout the call</inlineHelpText>
        <label>Was the Seller friendly and helpful?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_information_recorded_correctly__c</fullName>
        <inlineHelpText>Was the information from the customer recorded accurately and correctly on the IBB Systems?</inlineHelpText>
        <label>Was the information recorded correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Was_the_script_read_out_correctly__c</fullName>
        <inlineHelpText>Did the seller clearly and accurately read out the full script to the customer</inlineHelpText>
        <label>Was the script read out correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_the_different_products_explained__c</fullName>
        <inlineHelpText>Did the Seller clearly explain the different products to the customer?</inlineHelpText>
        <label>Were the different products explained?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Were_there_long_silences_during_call__c</fullName>
        <inlineHelpText>Did the seller avoid long silences during the call with the customer?</inlineHelpText>
        <label>Did seller avoid long silences on call?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>refer_to_Risk_Features_sent_to_you__c</fullName>
        <label>refer to Risk &amp; Features sent to you</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Yes - With learning points</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>HPP T&amp;C Observation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Observation_Completed_By__c</columns>
        <columns>HPP_Seller_name__c</columns>
        <columns>HPP_Customer_Name__c</columns>
        <columns>Customer_name__c</columns>
        <columns>Application_Reference_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>AIP_Date_Time_of_call__c</columns>
        <columns>HPP_Seller_name__c</columns>
        <columns>NAME</columns>
        <columns>HPP_Customer_Name__c</columns>
        <columns>Customer_name__c</columns>
        <columns>Observation_Completed_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Observation_Completed_By__c</field>
            <operation>equals</operation>
            <value>Saquib Ismail</value>
        </filters>
        <label>Sales HPP T&amp;C Observations</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>HPP# {YYYY}{MM}-{0}</displayFormat>
        <label>HPP T&amp;C Observation Phone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HPP T&amp;C Observation</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>